[package]
name = "litra-glow"
version = "0.1.0"
edition = "2024"
authors = ["Ivan Zakharchanka <3axap4eHko@gmail.com>"]
description = "Cross-platform Logitech Litra Glow controller with GUI"
repository = "https://github.com/3axap4eHko/litra"
homepage = "https://github.com/3axap4eHko/litra"
readme = "README.md"
keywords = ["logitech", "litra", "usb", "hid", "lighting"]
categories = ["hardware-support", "gui"]
license = "MIT"
build = "build.rs"
exclude = [
    ".github/",
    "assets/screenshot.jpg",
]

[dependencies]
slint = { version = "1.14", features = ["unstable-winit-030"] }
hidapi = "2.6"
open = "5"
log = "0.4"
env_logger = "0.11"
device_query = "4.0"
clap = { version = "4", features = ["derive"] }
[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-item = { version = "0.10", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tray-item = { version = "0.10", optional = true, features = ["ksni"] }

[features]
default = ["tray"]
tray = ["tray-item"]

[build-dependencies]
slint-build = "1.14"
embed-resource = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
